fix gap

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body, html {
 #imagesContainer {
     display: flex; /* Align images next to each other */
     justify-content: center; /* Center images container */
-    gap: 10px; /* Space between images */
+    /*gap: 10px; /* Space between images */
 }
 
 button {
